fixed styling to wrap

--- a/extension/styles.css
+++ b/extension/styles.css
@@ -2,12 +2,11 @@
   display: inline-flex;
   background-color: rgb(236, 236, 236);
   border-radius: 5px;
-  margin: 10px;
-
+  margin: 5px;
 }
 
 .flagContent {
-  margin: 10px;
+  margin: 5px;
 }
 
 .hackauth {
